新着順に表示するように実装

--- a/views/posts.jade
+++ b/views/posts.jade
@@ -1,8 +1,8 @@
 doctype html
-html(lang="jp")
+html(lang="ja")
   head
     meta(charset="UTF-8")
-    title 秘密の匿名掲示板
+    title 秘密の匿名掲示板（順番はツイッター風だけれどネ♪）
   body
     h1 秘密の匿名掲示板
     a(href="/logout") ログアウト
