最新の投稿を先に表示されるように変更

--- a/views/posts.jade
+++ b/views/posts.jade
@@ -16,4 +16,4 @@ html(lang="jp")
     each post in posts
       p #{post.content}
       p 投稿日時: #{post.createdAt}
-      hr
+      hr(color="7fffd4" shade)
