--- a/views/posts.pug
+++ b/views/posts.pug
@@ -16,4 +16,5 @@ html(lang="ja")
     each post in posts
       p #{post.content}
       p 投稿日時: #{post.createdAt}
+      p 投稿者: #{post.postedBy}
       hr
