降順で投稿を表示するよう実装

--- a/views/posts.pug
+++ b/views/posts.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="ja")
   head
     meta(charset="UTF-8")
-    title 秘密の匿名掲示板
+    title 掲示板
   body
-    h1 秘密の匿名掲示板
+    h1 掲示板
     a(href="/logout") ログアウト
     h2 新規投稿
     form(method="post" action="/posts")
