--- a/views/posts.pug
+++ b/views/posts.pug
@@ -15,5 +15,6 @@ html(lang="ja")
     h2 投稿一覧
     each post in posts
       p #{post.content}
+      p 投稿者: #{post.postedBy}
       p 投稿日時: #{post.createdAt}
       hr
