--- a/views/posts.pug
+++ b/views/posts.pug
@@ -1,19 +1,34 @@
 doctype html
-html(lang="ja")
+html(lang="jp")
   head
     meta(charset="UTF-8")
-    title 秘密の匿名掲示板
+    title Secret Anonymous Bulletin Board
   body
-    h1 秘密の匿名掲示板
-    a(href="/logout") ログアウト
-    h2 新規投稿
+    - function howLongPastFromPostedTime(createdAt) {
+    -   const milliseconds = new Date() - new Date(createdAt);
+    -   const seconds = Math.floor(milliseconds / 1000);
+    -   const minutes = Math.floor(milliseconds / 1000 / 60);
+    -   const hours = Math.floor(milliseconds / (1000 * 60) / 60);
+    -   const days = Math.floor((milliseconds / (1000 * 60 * 60)) / 24);
+    -   const years = Math.floor((milliseconds / (1000 * 60 * 60)) / 24 / 365);
+    -   if (years > 0)  return `${years}years ago`
+    -   else if (days > 0)  return `${days}days ago` 
+    -   else if (hours > 0)  return `${hours}hours ago` 
+    -   else if (minutes > 0)  return `${minutes}minutes ago` 
+    -   else if (seconds < 10) return `just now`
+    -   else return `${seconds}seconds ago`;
+    - }
+    h1 Secret Anonymous Bulletin Board
+    a(href="/logout") Log Out
+    h2 New Post
     form(method="post" action="/posts")
       div
         textarea(name="content" cols=40 rows=4)
       div
-        button(type="submit") 投稿
-    h2 投稿一覧
+        button(type="submit") Post
+    h2 List Of Posts
     each post in posts
       p #{post.content}
-      p 投稿日時: #{post.createdAt}
+      - const PastFromPostedTime = howLongPastFromPostedTime(post.createdAt);
+      p Posting Date: #{PastFromPostedTime}
       hr
