--- a/views/posts.pug
+++ b/views/posts.pug
@@ -4,6 +4,21 @@ html(lang="ja")
     meta(charset="UTF-8")
     title 秘密の匿名掲示板
   body
+    - function howLongPastFromPostedTime(createdAt) {
+    -   const milliseconds = new Date() - new Date(createdAt);
+    -   const seconds = Math.floor(milliseconds / 1000);
+    -   const minutes = Math.floor(milliseconds / 1000 / 60);
+    -   const hours = Math.floor(milliseconds / (1000 * 60) / 60);
+    -   const days = Math.floor((milliseconds / (1000 * 60 * 60)) / 24);
+    -   const years = Math.floor((milliseconds / (1000 * 60 * 60)) / 24 / 365);
+    -   if (years > 0)  return `${years}年前`
+    -   else if (days > 0)  return `${days}日前` 
+    -   else if (hours > 0)  return `${hours}時間前` 
+    -   else if (minutes > 0)  return `${minutes}分前` 
+    -   else if (seconds < 10) return `たった今`
+    -   else return `${seconds}秒前`;
+    - }
+
     h1 秘密の匿名掲示板
     a(href="/logout") ログアウト
     h2 新規投稿
@@ -14,6 +29,9 @@ html(lang="ja")
         button(type="submit") 投稿
     h2 投稿一覧
     each post in posts
+      p 投稿番号: #{post.id}
       p #{post.content}
+      - const PastFromPostedTime = howLongPastFromPostedTime(post.createdAt);
+      p 投稿日時: #{PastFromPostedTime}
       p 投稿日時: #{post.createdAt}
       hr
